--- a/data/stat_config.json
+++ b/data/stat_config.json
@@ -46,26 +46,34 @@
     "dailyAutoReset": true,
     "dailyAutoResetHour": 4,
     "enableBattleEndedMessage": true,
-    "battleEndedMessageDefeat": "<font color='#FE0E00'>Бой {{map}} - {{vehicle}} завершился поражением.</font>",
-    "battleEndedMessageDraw": "<font color='#FE7903'>Бой {{map}} - {{vehicle}} завершился ничьей.</font>",
-    "battleEndedMessageWin": "<font color='#60FF00'>Бой {{map}} - {{vehicle}} завершился победой!</font>",
+    "battleEndedMessageDefeat": "<font color='#FE0E00'>Niederlage! {{map}} - {{vehicle}}</font>",
+    "battleEndedMessageDraw": "<font color='#FE7903'>Unentschieden! {{map}} - {{vehicle}}</font>",
+    "battleEndedMessageWin": "<font color='#60FF00'>Sieg! {{map}} - {{vehicle}}</font>",
     "bgIcon": "",
     "template": [
-        "<font size='12'><textformat leading='-4' tabstops='[50,130]'><font color='#FFCC66'>WN8:</font><tab><font color='{{g:WN8}}'><b>{{WN8}} ({{XWN8}})</b></font><tab><font color='#FFCC66'><b>{{avgTier:1f}} (+{{avgBattleTierDiff:1f}}) </b>ур</font></textformat>",
-        "<textformat leading='-4' tabstops='[50,130,190]'><font color='#FFCC66'>Победы:</font><tab><font color='{{g:rWIN}}'><b>{{winsCount}}/{{battlesCount}}<tab>{{avgWinRate}}%<tab>{{rWIN}}</b></font>",
-        "<font color='#FFCC66'>Урон:</font><tab><font color='{{g:rDAMAGE}}'><b>{{totalDmg}}<tab>{{avgDamage}}<tab>{{rDAMAGE}}</b></font>",
-        "<font color='#FFCC66'>Фраги:</font><tab><font color='{{g:rFRAG}}'><b>{{totalFrag}}<tab>{{avgFrag}}<tab>{{rFRAG}}</b></font>",
-        "<font color='#FFCC66'>Засвет:</font><tab><font color='{{g:rSPOT}}'><b>{{totalSpot}}<tab>{{avgSpot}}<tab>{{rSPOT}}</b></font>",
-        "<font color='#FFCC66'>Защита:</font><tab><font color='{{g:rDEF}}'><b>{{totalDef}}<tab>{{avgDef}}<tab>{{rDEF}}</b></font>",
-        "<font color='#FFCC66'>Опыт:</font><tab><font color='{{g:medPlace}}'><b>{{totalXP}}<tab>{{avgOriginalXP}}<tab>{{medPlace:1f}}</b></font>",
-        "<font color='#FFCC66'>Кредиты:</font><tab><font color='{{c:credits}}'><b>{{credits}} <img src='img://gui/maps/icons/library/CreditsIcon-1.png' width='11' height='11' align='baseline' vspace='-2'><tab>{{avgCredits}} <img src='img://gui/maps/icons/library/CreditsIcon-1.png' width='11' height='11' align='baseline' vspace='-2'></b></font></textformat><font>"
+        "<font size='12'><textformat leading='-4' tabstops='[50,130]'><font color='#FFCC66'>WN8/EFF:</font><tab><font color='{{g:WN8}}'><b>{{WN8}} ({{XWN8}})</b></font><tab><font color='{{g:EFF}}'><b>{{EFF}} ({{XEFF}})</b></font></textformat>",
+        "<textformat leading='-4' tabstops='[50,130,190]'><font color='#FFCC66'>Winrate:</font><tab><font color='{{g:rWIN}}'><b>{{winsCount}}/{{battlesCount}}<tab>{{avgWinRate}}%<tab>{{rWIN}}</b></font>",
+        "<font color='#FFCC66'>Damage:</font><tab><font color='{{g:rDAMAGE}}'><b>{{totalDmg}}<tab>{{avgDamage}}<tab>{{rDAMAGE}}</b></font>",
+        "<font color='#FFCC66'>Kills:</font><tab><font color='{{g:rFRAG}}'><b>{{totalFrag}}<tab>{{avgFrag}}<tab>{{rFRAG}}</b></font>",
+        "<font color='#FFCC66'>Spoted:</font><tab><font color='{{g:rSPOT}}'><b>{{totalSpot}}<tab>{{avgSpot}}<tab>{{rSPOT}}</b></font>",
+        "<font color='#FFCC66'>Def:</font><tab><font color='{{g:rDEF}}'><b>{{totalDef}}<tab>{{avgDef}}<tab>{{rDEF}}</b></font>",
+        "<font color='#FFCC66'>XP:</font><tab><font color='{{g:medPlace}}'><b>{{totalXP}}<tab>{{avgOriginalXP}}<tab>{{medPlace:1f}}</b></font>",
+        "<font color='#FFCC66'>Kredits:</font><tab><font color='{{c:credits}}'><b>{{credits}} <img src='img://gui/maps/icons/library/CreditsIcon-1.png' width='11' height='11' align='baseline' vspace='-2'><tab>{{avgCredits}} <img src='img://gui/maps/icons/library/CreditsIcon-1.png' width='11' height='11' align='baseline' vspace='-2'></b></font></textformat><font>"
     ],
     "showStatByTank": true,
-    "textGeneralPageButton": "По танкам",
-    "textByTankPageButton": "Общая",
-    "byTankTitle": "<font size='12' color='#FFCC66'><textformat leading='-4' tabstops='[80,130,170]'>Танк<tab>Победы<tab>Урон<tab>WN8</textformat><font>",
+    "textGeneralPageButton": "Tank Stats",
+    "textByTankPageButton": "General Stats",
+    "byTankTitle": "<font size='12' color='#FFCC66'><textformat leading='-4' tabstops='[80,130,170]'>Тank<tab>WIN<tab>DMG<tab>WN8</textformat><font>",
     "gradient": {
         "WN8": [
+            {"value": 155, "color": "#FE0E00"},
+            {"value": 530, "color": "#FE7903"},
+            {"value": 1030, "color": "#F8F400"},
+            {"value": 1638, "color": "#60FF00"},
+            {"value": 2253, "color": "#02C9B3"},
+            {"value": 2895, "color": "#D042F3"}
+        ],
+	"EFF": [
             {"value": 155, "color": "#FE0E00"},
             {"value": 530, "color": "#FE7903"},
             {"value": 1030, "color": "#F8F400"},
